Opened 13 years ago

Closed 13 years ago

#2191 closed defect (fixed)

ffplay: iff 8svx regression with time counter

Reported by: ami_stuff Owned by: Marton Balint
Priority: important Component: ffplay
Version: git-master Keywords: 8svx regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

ffplay starts time counter from 26s

git-2f74f8d 13-Nov-2012 - ok
git-8b6aeb1 20-Nov-2012 - bad

http://www.datafilehost.com/download-e71c231b.html

D:\>ffplay test.8svx
ffplay version N-49268-ge9d443c Copyright (c) 2003-2013 the FFmpeg developers
  built on Jan 24 2013 23:27:01 with gcc 4.7.2 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-libass --enable-libbluray --enable-libcaca --enable-libfreetype --enable-libg
sm --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --e
nable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinger --e
nable-libspeex --enable-libtheora --enable-libtwolame --enable-libvo-aacenc --en
able-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libx264 --enable
-libxavs --enable-libxvid --enable-zlib
  libavutil      52. 15.103 / 52. 15.103
  libavcodec     54. 90.100 / 54. 90.100
  libavformat    54. 61.104 / 54. 61.104
  libavdevice    54.  3.102 / 54.  3.102
  libavfilter     3. 33.100 /  3. 33.100
  libswscale      2.  2.100 /  2.  2.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  2.100 / 52.  2.100
[iff @ 026588c0] Estimating duration from bitrate, this may be inaccurate
Input #0, iff, from 'test.8svx':
  Metadata:
    comment         : File created by Sound Exchange
  Duration: 00:00:30.02, bitrate: 705 kb/s
    Stream #0:0: Audio: pcm_s8_planar (8SVX / 0x58565338), 44100 Hz, stereo, u8p
, 705 kb/s
warning: audio buffer is probably too small
  30.41 A-V:  0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B f=0/0

also unrelated to this ticket: when you open iff ilbm or iff pbm file and seek
with the mouse then displayed output will change - probably regression since added
seeking support for iff maud

Change History (7)

comment:1 by Carl Eugen Hoyos, 13 years ago

Keywords: 8svx regression added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Regression since da8242e.

comment:2 by Elon Musk, 13 years ago

Really? da8242e changes decoder stuff, and that cant touch lavf at all.

About unrelated issue - please once for all do not mention unrelated issue in unrelated ticket open new ticket for it. Also maud seeking could not affect it at any way, maud seeking only affect maud. So please do not point where issue probably is if you never tested you claims. From now on I will ignore unrelated issue in this ticket.

comment:3 by Elon Musk, 13 years ago

Component: undeterminedFFplay

comment:4 by Carl Eugen Hoyos, 13 years ago

I suspect da8242e broke an assumption that is approximately buf_size < AVCODEC_MAX_AUDIO_FRAME_SIZE * channels

comment:5 by Elon Musk, 13 years ago

That is deprecated and not used by this code in any way. Except in ffplay.

comment:6 by Marton Balint, 13 years ago

Owner: set to Marton Balint

comment:7 by Marton Balint, 13 years ago

Resolution: fixed
Status: openclosed

Fixed in git master.

Note: See TracTickets for help on using tickets.